--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Shuangchen Yu (于双辰)"
-  avatar           : "profile.png"
+  avatar           : "yscprofile.png"
   bio              : "Tsinghua University"
   location         : "Beijing, China"
   employer         :
