--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Shuangchen Yu     (于双辰)"
+  name             : "Shuangchen Yu"
   avatar           : "yscprofile.png"
   bio              : "Tsinghua University"
   location         : "Beijing, China"
